# quintic-spline-solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  constants.hpp  example  main.cpp  spline.cpp  spline.hpp
includes/spline_solver/: constants.hpp  draw.hpp  hermite_spline.hpp  spline.hpp  spline_solver.hpp
src/: spline.cpp
